injected forecast HTML from JavaScript

--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
         <div class="weather-app-temperature-container">
           <div id="icon"></div>
           <div class="weather-app-temperature" id="temperature"></div>
-          <div class="weatehr-app-unit">°C</div>
+          <div class="weather-app-unit">°C</div>
         </div>
       </div>
+      <div class="weather-forecast" id="forecast"></div>
     </main>
 
     <footer>
       This was coded by
       <a href="https://github.com/thatpumagirl" target="_blank">Joy Nzomo</a> and code hosted on <a
         href="https://github.com/thatpumagirl/amazing-weather-app" target="_blank"> Github</a> and website hosted on <a
-        href="https://amazing-weather-app-joykamene.netlify.app/" target="_blank">Netlify</a>
+        href="https://advanced-weather-app-joy-nzomo.netlify.app/" target="_blank">Netlify</a>
     </footer>
   </div>
   <script src="src/index.js"></script>
